tinyc/test/good/ptr-return-zero.c
int *foo() { return 0; }

int main()
{
    int *p = foo();
    return 0;
}
