tinyc/test/bad/do-while-scope.c
int main()
{
    do {
        int x = 0;
    }
    while ( x );

    return 0;
}
